@@ -47,3 +47,6 @@ a+a
 a-a
 a*a
 a/a
+
+\\#1652
+p=436^56-35;lift(Mod(271,p)^((p-1)/2))
