@@ -101,6 +101,8 @@ BA 77- [cygwin64] ellap(ellinit([0,0,1,-1,0]),10007) broken
    78- primes([-5,5]) -> [5] (spurious absolute values)
    79- matqr([;]) -> crash
    80- content([]) -> 0 [ was 1 ]
+   81- Fp_rem_mBarrett could return a non-normalized result
+       p=436^56-35;Mod(271,p)^((p-1)/2) -> p+1
 
   Added
     1- add optional argument to sumdigits to specify the base
